@@ -1,5 +1,8 @@
 2008-05-04  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/engines/orbitalengine.*: More updates to the orbital
+	engine to improve rendering consistency.
+
 	* libavogadro/src/extensions/orbitalextension.cpp: Fixed another
 	crasher - when no basis set has been loaded.
 
